--- a/style.css
+++ b/style.css
@@ -45,4 +45,5 @@ canvas {
     user-select: none;
     padding: 0 0 15px 20px;
     cursor: pointer;
-  text-decoration: underline;}
+  text-decoration: underline;
+}
